@@ -1,6 +1,8 @@
-DATE - VER  {BETA}
+xx XXX xxxx - V 0.1.xxx.1  {BETA}
     Fixed grammar errors in release notes.  I'm a programmer, not a speller :D
     Fixed a channel count weirdness where the wrong count was shown when a group is selected.
+    Added an extension method so that logging to crash.log can be called from any class.
+    Bug #119 - FIXED - Channel events not working properly with groups, will put the marks on wrong channel.
 
 02 SEP 2013 - V 0.1.245.1  {BETA}
     Bug #111 - FIXED - Red X of death.  When managing profiles, exiting can cause the Red X of death. 
@@ -8,7 +10,7 @@ DATE - VER  {BETA}
     Bug #113 - FIXED - Sort Order will move up by one when edit/manage a profile, eventually crashing the system.
     Bug #114 - MITIGATED - Looping will cause a crash if let running for a long period. "Fix" writes to crash.log
         if the values are out of range to help with root cause diagnostics.
-    Bug #115 - FIXED - Drawing intensity in percentange mode sets intensity to the incorrect level.
+    Bug #115 - FIXED - Drawing intensity in percentage mode sets intensity to the incorrect level.
     Bug #116 - FIXED - Selecting sequence length on toolbar and pressing enter says it reset the length even though
         nothing changed.
     Bug #117 - CAN NOT REPRODUCE - Channel Order does not show correctly on toolbar when a sequence is opened.
